[package]
name = "RustyLeetCode"
version = "0.1.0"
edition = "2021"

[dependencies]


[dev-dependencies]
criterion = "0.6.0"


[[bench]]
name = "arrays_median_of_two_sorted_arrays_bench"
harness = false

[[bench]]
name = "dynamic_programming_counting_bits_bench"
harness = false
[[bench]]
name = "dynamic_programming_easy_climbing_stairs_bench"
harness = false
[[bench]]
name = "dynamic_programming_fibonacci_number_bench"
harness = false

[[bench]]
name = "linked_list_add_two_numbers_bench"
harness = false

[[bench]]
name = "math_reverse_integer_bench"
harness = false

[[bench]]
name = "strings_longest_palindromic_substring_bench"
harness = false
[[bench]]
name = "strings_longest_substrings_without_repeating_chars_bench"
harness = false