[package]
name = "RustyLeetCode"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "arrays_median_of_two_sorted_arrays_bench"
harness = false
[[bench]]
name = "arrays_permutations_bench"
harness = false
[[bench]]
name = "arrays_permutations2_bench"
harness = false

[[bench]]
name = "dynamic_programming_counting_bits_bench"
harness = false
[[bench]]
name = "dynamic_programming_easy_climbing_stairs_bench"
harness = false
[[bench]]
name = "dynamic_programming_fibonacci_number_bench"
harness = false
[[bench]]
name = "dynamic_programming_interleaving_string_bench"
harness = false
[[bench]]
name = "dynamic_programming_number_of_ways_to_rearrange_sticks_with_k_visible_bench"
harness = false
[[bench]]
name = "dynamic_programming_tribonacci_number_bench"
harness = false

[[bench]]
name = "graphs_find_if_path_exists_in_graph_bench"
harness = false
[[bench]]
name = "graphs_find_the_town_judge_bench"
harness = false

[[bench]]
name = "linked_list_add_two_numbers_bench"
harness = false

[[bench]]
name = "math_reverse_integer_bench"
harness = false

[[bench]]
name = "matrices_valid_sudoku_bench"
harness = false

[[bench]]
name = "strings_longest_palindromic_substring_bench"
harness = false
[[bench]]
name = "strings_longest_substrings_without_repeating_chars_bench"
harness = false